--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matrix Toilet Game</title>
+    <title>Matrix</title>
     <style>
-        /* General Styles */
         body {
             margin: 0;
             overflow: hidden;
@@ -13,14 +12,35 @@
             background-color: black;
             color: #00ff00;
         }
-
-        /* Game Container */
+        #passwordScreen {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: black;
+            color: #00ff00;
+        }
+        #passwordButton {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin-top: 10px;
+            background-color: #00ff00;
+            color: black;
+            border: none;
+            border-radius: 5px;
+        }
+        #passwordButton:hover {
+            background-color: #008000;
+        }
         #gameContainer {
+            display: none;
             position: relative;
             width: 100vw;
             height: 100vh;
+            overflow: hidden;
         }
-
         #matrixBackground {
             position: absolute;
             width: 100%;
@@ -34,13 +54,10 @@
             animation: matrixRain 5s infinite linear;
             z-index: -1;
         }
-
         @keyframes matrixRain {
             from { transform: translateY(-100%); }
             to { transform: translateY(100%); }
         }
-
-        /* Player */
         #player {
             position: absolute;
             bottom: 20px;
@@ -48,28 +65,29 @@
             transform: translateX(-50%);
             width: 50px;
             height: 50px;
-            background: url('https://i.imgur.com/6bJYpGV.png') no-repeat center/cover;
+            background-color: #00ff00;
+            background-image: url('https://i.imgur.com/6bJYpGV.png');
+            background-size: cover;
             border-radius: 50%;
+            z-index: 2;
         }
-
-        /* Toilet */
         .toilet {
             position: absolute;
             width: 50px;
             height: 50px;
-            background: url('https://i.imgur.com/FuaVxFb.png') no-repeat center/cover;
+            background-image: url('https://i.imgur.com/FuaVxFb.png');
+            background-size: cover;
             filter: hue-rotate(90deg);
+            z-index: 2;
         }
-
-        /* Score */
         #score {
             position: absolute;
             top: 10px;
             left: 10px;
             font-size: 20px;
+            color: #00ff00;
+            z-index: 3;
         }
-
-        /* Game Over */
         #gameOver {
             display: none;
             position: absolute;
@@ -78,36 +96,39 @@
             transform: translate(-50%, -50%);
             text-align: center;
             font-size: 36px;
+            color: #00ff00;
             background: rgba(0, 0, 0, 0.9);
             padding: 20px;
             border-radius: 10px;
+            z-index: 3;
         }
-
         #restartButton {
             margin-top: 10px;
             padding: 10px 20px;
             font-size: 20px;
-            background-color: #00ff00;
             color: black;
+            background-color: #00ff00;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
-
         #restartButton:hover {
             background-color: #008000;
         }
-
-        /* Animations */
         @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25%, 75% { transform: translateX(-10px); }
+            0% { transform: translateX(0); }
+            25% { transform: translateX(-10px); }
             50% { transform: translateX(10px); }
+            75% { transform: translateX(-10px); }
+            100% { transform: translateX(0); }
         }
     </style>
 </head>
 <body>
-    <!-- Game Container -->
+    <div id="passwordScreen">
+        <input type="password" id="passwordInput" placeholder="Enter Password">
+        <button id="passwordButton">Submit</button>
+    </div>
     <div id="gameContainer">
         <div id="matrixBackground"></div>
         <div id="player"></div>
@@ -119,6 +140,10 @@
     </div>
 
     <script>
+        const passwordScreen = document.getElementById("passwordScreen");
+        const passwordInput = document.getElementById("passwordInput");
+        const passwordButton = document.getElementById("passwordButton");
+
         const gameContainer = document.getElementById("gameContainer");
         const player = document.getElementById("player");
         const scoreDisplay = document.getElementById("score");
@@ -133,6 +158,18 @@
         let spawnRate = 1000;
         let keys = { ArrowLeft: false, ArrowRight: false };
 
+        function movePlayer() {
+            const playerSpeed = 10; // Increased speed
+            if (keys.ArrowLeft) {
+                playerPosition = Math.max(0, playerPosition - playerSpeed);
+            }
+            if (keys.ArrowRight) {
+                playerPosition = Math.min(window.innerWidth - 50, playerPosition + playerSpeed);
+            }
+            player.style.left = playerPosition + "px";
+            if (!gameOver) requestAnimationFrame(movePlayer);
+        }
+
         document.addEventListener("keydown", (e) => {
             if (e.key in keys) keys[e.key] = true;
         });
@@ -140,71 +177,6 @@
         document.addEventListener("keyup", (e) => {
             if (e.key in keys) keys[e.key] = false;
         });
-
-        function movePlayer() {
-            const playerSpeed = 10;
-            if (keys.ArrowLeft) playerPosition = Math.max(0, playerPosition - playerSpeed);
-            if (keys.ArrowRight) playerPosition = Math.min(window.innerWidth - 50, playerPosition + playerSpeed);
-            player.style.left = playerPosition + "px";
-            if (!gameOver) requestAnimationFrame(movePlayer);
-        }
-
-        function spawnToilets() {
-            if (gameOver) return;
-            const toilet = document.createElement("div");
-            toilet.classList.add("toilet");
-            toilet.style.left = Math.random() * (window.innerWidth - 50) + "px";
-            toilet.style.top = "0px";
-            gameContainer.appendChild(toilet);
-
-            let position = 0;
-            const fallInterval = setInterval(() => {
-                if (gameOver) {
-                    clearInterval(fallInterval);
-                    return;
-                }
-
-                position += toiletSpeed;
-                toilet.style.top = position + "px";
-
-                const playerRect = player.getBoundingClientRect();
-                const toiletRect = toilet.getBoundingClientRect();
-
-                if (
-                    playerRect.left < toiletRect.right &&
-                    playerRect.right > toiletRect.left &&
-                    playerRect.top < toiletRect.bottom &&
-                    playerRect.bottom > toiletRect.top
-                ) {
-                    player.style.animation = "shake 0.5s";
-                    setTimeout(() => player.style.animation = "", 500);
-                    endGame();
-                }
-
-                if (position > window.innerHeight) {
-                    clearInterval(fallInterval);
-                    toilet.remove();
-                    score++;
-                    updateDifficulty();
-                }
-            }, 20);
-
-            setTimeout(spawnToilets, spawnRate);
-        }
-
-        function updateDifficulty() {
-            scoreDisplay.textContent = `Score: ${score}`;
-            if (score % 5 === 0) {
-                maxToilets++;
-                toiletSpeed += 0.5;
-                spawnRate = Math.max(500, spawnRate - 50);
-            }
-        }
-
-        function endGame() {
-            gameOver = true;
-            gameOverDisplay.style.display = "block";
-        }
 
         function startGame() {
             score = 0;
@@ -215,16 +187,87 @@
 
             scoreDisplay.textContent = "Score: 0";
             gameOverDisplay.style.display = "none";
-            document.querySelectorAll(".toilet").forEach(toilet => toilet.remove());
 
+            document.querySelectorAll(".toilet").forEach((toilet) => toilet.remove());
             spawnToilets();
             movePlayer();
         }
 
+        function spawnToilets() {
+            if (gameOver) return;
+
+            for (let i = 0; i < maxToilets; i++) {
+                const toilet = document.createElement("div");
+                toilet.classList.add("toilet");
+                toilet.style.left = Math.random() * (window.innerWidth - 50) + "px";
+                toilet.style.top = "0px";
+                gameContainer.appendChild(toilet);
+
+                let position = 0;
+                const fallInterval = setInterval(() => {
+                    if (gameOver) {
+                        clearInterval(fallInterval);
+                        return;
+                    }
+
+                    position += toiletSpeed;
+                    toilet.style.top = position + "px";
+
+                    const playerRect = player.getBoundingClientRect();
+                    const toiletRect = toilet.getBoundingClientRect();
+
+                    if (
+                        playerRect.left < toiletRect.right &&
+                        playerRect.right > toiletRect.left &&
+                        playerRect.top < toiletRect.bottom &&
+                        playerRect.bottom > toiletRect.top
+                    ) {
+                        player.style.animation = "shake 0.5s";
+                        setTimeout(() => {
+                            player.style.animation = "";
+                        }, 500);
+                        endGame();
+                    }
+
+                    if (position > window.innerHeight) {
+                        clearInterval(fallInterval);
+                        toilet.remove();
+                        score++;
+                        updateDifficulty();
+                    }
+                }, 20);
+            }
+
+            setTimeout(spawnToilets, spawnRate);
+        }
+
+        function updateDifficulty() {
+            scoreDisplay.textContent = "Score: " + score;
+
+            if (score % 5 === 0) {
+                maxToilets += 1;
+                toiletSpeed += 0.5;
+                spawnRate = Math.max(500, spawnRate - 50);
+            }
+        }
+
+        function endGame() {
+            gameOver = true;
+            gameOverDisplay.style.display = "block";
+        }
+
         restartButton.addEventListener("click", startGame);
 
-        // Start the game immediately
-        startGame();
+        passwordButton.addEventListener("click", () => {
+            const password = passwordInput.value;
+            if (password === "matthewhaslrizz") {
+                passwordScreen.style.display = "none";
+                gameContainer.style.display = "block";
+                startGame();
+            } else {
+                alert("Incorrect password. Try again.");
+            }
+        });
     </script>
 </body>
 </html>
