--- a/index.html
+++ b/index.html
@@ -1,273 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matrix</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            font-family: "Courier New", monospace;
-            background-color: black;
-            color: #00ff00;
-        }
-        #passwordScreen {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: black;
-            color: #00ff00;
-        }
-        #passwordButton {
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-            background-color: #00ff00;
-            color: black;
-            border: none;
-            border-radius: 5px;
-        }
-        #passwordButton:hover {
-            background-color: #008000;
-        }
-        #gameContainer {
-            display: none;
-            position: relative;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
-        }
-        #matrixBackground {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: repeating-linear-gradient(
-                rgba(0, 255, 0, 0.2) 0px,
-                rgba(0, 255, 0, 0.2) 1px,
-                transparent 1px,
-                transparent 2px
-            );
-            animation: matrixRain 5s infinite linear;
-            z-index: -1;
-        }
-        @keyframes matrixRain {
-            from { transform: translateY(-100%); }
-            to { transform: translateY(100%); }
-        }
-        #player {
-            position: absolute;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 50px;
-            height: 50px;
-            background-color: #00ff00;
-            background-image: url('https://i.imgur.com/6bJYpGV.png');
-            background-size: cover;
-            border-radius: 50%;
-            z-index: 2;
-        }
-        .toilet {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            background-image: url('https://i.imgur.com/FuaVxFb.png');
-            background-size: cover;
-            filter: hue-rotate(90deg);
-            z-index: 2;
-        }
-        #score {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            font-size: 20px;
-            color: #00ff00;
-            z-index: 3;
-        }
-        #gameOver {
-            display: none;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center;
-            font-size: 36px;
-            color: #00ff00;
-            background: rgba(0, 0, 0, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            z-index: 3;
-        }
-        #restartButton {
-            margin-top: 10px;
-            padding: 10px 20px;
-            font-size: 20px;
-            color: black;
-            background-color: #00ff00;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        #restartButton:hover {
-            background-color: #008000;
-        }
-        @keyframes shake {
-            0% { transform: translateX(0); }
-            25% { transform: translateX(-10px); }
-            50% { transform: translateX(10px); }
-            75% { transform: translateX(-10px); }
-            100% { transform: translateX(0); }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Skibidi</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      background: black;
+      color: lime;
+      font-family: monospace;
+    }
+    canvas {
+      display: block;
+    }
+    #gameCanvas {
+      background: black;
+    }
+    #gameOver {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 2em;
+      color: red;
+      display: none;
+      text-align: center;
+    }
+    #restartButton {
+      margin-top: 20px;
+      padding: 10px 20px;
+      font-size: 1em;
+      background: lime;
+      color: black;
+      border: none;
+      cursor: pointer;
+    }
+    #restartButton:hover {
+      background: yellow;
+    }
+    #score {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      font-size: 1.5em;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <div id="passwordScreen">
-        <input type="password" id="passwordInput" placeholder="Enter Password">
-        <button id="passwordButton">Submit</button>
-    </div>
-    <div id="gameContainer">
-        <div id="matrixBackground"></div>
-        <div id="player"></div>
-        <div id="score">Score: 0</div>
-        <div id="gameOver">
-            Game Over! <br>
-            <button id="restartButton">Restart</button>
-        </div>
-    </div>
+  <canvas id="gameCanvas"></canvas>
+  <div id="score">Score: 0</div>
+  <div id="gameOver">
+    Game Over!<br>
+    Final Score: <span id="finalScore">0</span><br>
+    <button id="restartButton">Restart</button>
+  </div>
 
-    <script>
-        const passwordScreen = document.getElementById("passwordScreen");
-        const passwordInput = document.getElementById("passwordInput");
-        const passwordButton = document.getElementById("passwordButton");
+  <script>
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
+    const gameOverText = document.getElementById('gameOver');
+    const restartButton = document.getElementById('restartButton');
+    const scoreDisplay = document.getElementById('score');
+    const finalScoreDisplay = document.getElementById('finalScore');
 
-        const gameContainer = document.getElementById("gameContainer");
-        const player = document.getElementById("player");
-        const scoreDisplay = document.getElementById("score");
-        const gameOverDisplay = document.getElementById("gameOver");
-        const restartButton = document.getElementById("restartButton");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-        let playerPosition = window.innerWidth / 2 - 25;
-        let score = 0;
-        let gameOver = false;
-        let maxToilets = 1;
-        let toiletSpeed = 5;
-        let spawnRate = 1000;
-        let keys = { ArrowLeft: false, ArrowRight: false };
+    let player = {
+      x: canvas.width / 2 - 25,
+      y: canvas.height - 60,
+      width: 50,
+      height: 50,
+      color: 'gold',
+      speed: 7,
+      dx: 0
+    };
 
-        function movePlayer() {
-            const playerSpeed = 10; // Increased speed
-            if (keys.ArrowLeft) {
-                playerPosition = Math.max(0, playerPosition - playerSpeed);
-            }
-            if (keys.ArrowRight) {
-                playerPosition = Math.min(window.innerWidth - 50, playerPosition + playerSpeed);
-            }
-            player.style.left = playerPosition + "px";
-            if (!gameOver) requestAnimationFrame(movePlayer);
+    let toilets = [];
+    let frames = 0;
+    let gameRunning = true;
+    let score = 0;
+
+    function drawMatrixEffect() {
+      ctx.font = '16px monospace';
+      const columns = Math.floor(canvas.width / 16);
+      const drops = Array(columns).fill(0);
+
+      ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = 'lime';
+      drops.forEach((drop, i) => {
+        const char = String.fromCharCode(0x30A0 + Math.random() * 96);
+        ctx.fillText(char, i * 16, drop * 16);
+        if (Math.random() > 0.98) drops[i] = 0;
+        drops[i]++;
+      });
+    }
+
+    function drawPlayer() {
+      ctx.fillStyle = player.color;
+      ctx.fillRect(player.x, player.y, player.width, player.height);
+    }
+
+    function drawToilets() {
+      ctx.fillStyle = 'white';
+      toilets.forEach(toilet => {
+        ctx.fillRect(toilet.x, toilet.y, toilet.width, toilet.height);
+        toilet.y += toilet.speed;
+
+        if (toilet.y > canvas.height) {
+          toilet.y = 0 - toilet.height;
+          toilet.x = Math.random() * (canvas.width - toilet.width);
         }
 
-        document.addEventListener("keydown", (e) => {
-            if (e.key in keys) keys[e.key] = true;
+        if (
+          player.x < toilet.x + toilet.width &&
+          player.x + player.width > toilet.x &&
+          player.y < toilet.y + toilet.height &&
+          player.height + player.y > toilet.y
+        ) {
+          gameRunning = false;
+        }
+      });
+    }
+
+    function update() {
+      if (!gameRunning) {
+        gameOverText.style.display = 'block';
+        finalScoreDisplay.textContent = score;
+        return;
+      }
+
+      frames++;
+      score = Math.floor(frames / 10);
+      scoreDisplay.textContent = `Score: ${score}`;
+      
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawMatrixEffect();
+
+      // Move player
+      player.x += player.dx;
+      if (player.x < 0) player.x = 0;
+      if (player.x > canvas.width - player.width) player.x = canvas.width - player.width;
+
+      drawPlayer();
+
+      if (frames % 50 === 0) {
+        toilets.push({
+          x: Math.random() * canvas.width,
+          y: 0,
+          width: 40,
+          height: 40,
+          speed: 3 + Math.random() * 2
         });
+      }
 
-        document.addEventListener("keyup", (e) => {
-            if (e.key in keys) keys[e.key] = false;
-        });
+      drawToilets();
+      requestAnimationFrame(update);
+    }
 
-        function startGame() {
-            score = 0;
-            gameOver = false;
-            maxToilets = 1;
-            toiletSpeed = 5;
-            spawnRate = 1000;
+    function movePlayer(e) {
+      if (e.key === 'ArrowLeft') player.dx = -player.speed;
+      if (e.key === 'ArrowRight') player.dx = player.speed;
+    }
 
-            scoreDisplay.textContent = "Score: 0";
-            gameOverDisplay.style.display = "none";
+    function stopPlayer(e) {
+      if (e.key === 'ArrowLeft' || e.key === 'ArrowRight') player.dx = 0;
+    }
 
-            document.querySelectorAll(".toilet").forEach((toilet) => toilet.remove());
-            spawnToilets();
-            movePlayer();
-        }
+    function restartGame() {
+      gameRunning = true;
+      gameOverText.style.display = 'none';
+      player.x = canvas.width / 2 - 25;
+      toilets = [];
+      frames = 0;
+      score = 0;
+      update();
+    }
 
-        function spawnToilets() {
-            if (gameOver) return;
+    document.addEventListener('keydown', movePlayer);
+    document.addEventListener('keyup', stopPlayer);
+    restartButton.addEventListener('click', restartGame);
 
-            for (let i = 0; i < maxToilets; i++) {
-                const toilet = document.createElement("div");
-                toilet.classList.add("toilet");
-                toilet.style.left = Math.random() * (window.innerWidth - 50) + "px";
-                toilet.style.top = "0px";
-                gameContainer.appendChild(toilet);
-
-                let position = 0;
-                const fallInterval = setInterval(() => {
-                    if (gameOver) {
-                        clearInterval(fallInterval);
-                        return;
-                    }
-
-                    position += toiletSpeed;
-                    toilet.style.top = position + "px";
-
-                    const playerRect = player.getBoundingClientRect();
-                    const toiletRect = toilet.getBoundingClientRect();
-
-                    if (
-                        playerRect.left < toiletRect.right &&
-                        playerRect.right > toiletRect.left &&
-                        playerRect.top < toiletRect.bottom &&
-                        playerRect.bottom > toiletRect.top
-                    ) {
-                        player.style.animation = "shake 0.5s";
-                        setTimeout(() => {
-                            player.style.animation = "";
-                        }, 500);
-                        endGame();
-                    }
-
-                    if (position > window.innerHeight) {
-                        clearInterval(fallInterval);
-                        toilet.remove();
-                        score++;
-                        updateDifficulty();
-                    }
-                }, 20);
-            }
-
-            setTimeout(spawnToilets, spawnRate);
-        }
-
-        function updateDifficulty() {
-            scoreDisplay.textContent = "Score: " + score;
-
-            if (score % 5 === 0) {
-                maxToilets += 1;
-                toiletSpeed += 0.5;
-                spawnRate = Math.max(500, spawnRate - 50);
-            }
-        }
-
-        function endGame() {
-            gameOver = true;
-            gameOverDisplay.style.display = "block";
-        }
-
-        restartButton.addEventListener("click", startGame);
-
-        passwordButton.addEventListener("click", () => {
-            const password = passwordInput.value;
-            if (password === "matthewhaslrizz") {
-                passwordScreen.style.display = "none";
-                gameContainer.style.display = "block";
-                startGame();
-            } else {
-                alert("Incorrect password. Try again.");
-            }
-        });
-    </script>
+    update();
+  </script>
 </body>
 </html>
